--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Cesar's Ramirez CIT_480 Blog 7
 
-logo: /assets/img/computer.jpg
+logo: /assets/img/edge_computing.png
 description: A blog for Technology and tools for the CIT comunity
 show_downloads: true
 google_analytics:
